<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/dragIndicator"
        android:layout_width="24dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/shape_draggable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/allAccountsTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/all_accounts"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dragIndicator"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/withoutCategoryTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/accounts_without_category"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/allAccountsTV"
        app:layout_constraintStart_toStartOf="@+id/allAccountsTV"
        app:layout_constraintTop_toBottomOf="@+id/allAccountsTV"
        style="@style/TextAppearance.MaterialComponents.Body1" />

    <!--    <View-->
    <!--        android:id="@+id/separator1"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:background="@color/colorSeparator"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/withoutCategoryTV"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@+id/withoutCategoryTV"
        app:layout_constraintStart_toStartOf="@+id/withoutCategoryTV"
        app:layout_constraintTop_toBottomOf="@+id/withoutCategoryTV" />

    <View
        android:id="@+id/separator2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorSeparator"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"/>

    <TextView
        android:id="@+id/newCategoryTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_category"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/separator2"
        style="@style/TextAppearance.MaterialComponents.Body1" />

    <View
        android:id="@+id/separator3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorSeparator"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/newCategoryTV" />

    <TextView
        android:id="@+id/passGeneratorTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pass_generator"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/newCategoryTV"
        app:layout_constraintStart_toStartOf="@+id/newCategoryTV"
        app:layout_constraintTop_toBottomOf="@+id/separator3"
        style="@style/TextAppearance.MaterialComponents.Body1" />

    <TextView
        android:id="@+id/settingsTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/settings"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/ic_settings"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/passGeneratorTV"
        app:layout_constraintStart_toStartOf="@+id/passGeneratorTV"
        app:layout_constraintTop_toBottomOf="@+id/passGeneratorTV"
        style="@style/TextAppearance.MaterialComponents.Body1" />

</androidx.constraintlayout.widget.ConstraintLayout>