<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.neexol.arkey.viewmodels.MasterPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.MasterPasswordActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentMasterPasswordInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/current_master_password"
            app:handleErrorFrom="@{viewModel.masterPasswordError}"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.masterPassword}"
                app:bindAfterTextChanged="@{viewModel::clearErrors}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newMasterPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_master_password"
            app:handleErrorFrom="@{viewModel.newMasterPasswordError}"
            app:endIconMode="password_toggle"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/currentMasterPasswordInput"
            app:layout_constraintStart_toStartOf="@id/currentMasterPasswordInput"
            app:layout_constraintTop_toBottomOf="@id/currentMasterPasswordInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.newMasterPassword}"
                app:bindAfterTextChanged="@{viewModel::clearErrors}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmMasterPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_new_master_password"
            app:handleErrorFrom="@{viewModel.confirmNewMasterPasswordError}"
            app:layout_constraintEnd_toEndOf="@+id/newMasterPasswordInput"
            app:layout_constraintStart_toStartOf="@+id/newMasterPasswordInput"
            app:layout_constraintTop_toBottomOf="@+id/newMasterPasswordInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.confirmNewMasterPassword}"
                app:bindAfterTextChanged="@{viewModel::clearErrors}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="@{() -> viewModel.checkAndExecuteOperation()}"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/confirmMasterPasswordInput"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/confirmMasterPasswordInput"
            app:layout_constraintTop_toBottomOf="@+id/confirmMasterPasswordInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>