<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.neexol.arkey.viewmodels.ModifyAccountViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_include"
            layout="@layout/view_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_name"
                        android:layout_marginTop="16dp"
                        android:layout_marginHorizontal="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:singleLine="true"
                            android:text="@={viewModel.name}"
                            app:bindAfterTextChanged="@{viewModel::checkData}"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/account_login"
                        app:layout_constraintEnd_toEndOf="@id/nameInput"
                        app:layout_constraintStart_toStartOf="@id/nameInput"
                        app:layout_constraintTop_toBottomOf="@id/nameInput">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:text="@={viewModel.login}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_password"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="@id/loginInput"
                        app:layout_constraintStart_toStartOf="@id/loginInput"
                        app:layout_constraintTop_toBottomOf="@id/loginInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true"
                            android:text="@={viewModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/siteInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_site"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="@id/passwordInput"
                        app:layout_constraintStart_toStartOf="@id/passwordInput"
                        app:layout_constraintTop_toBottomOf="@id/passwordInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textUri"
                            android:singleLine="true"
                            android:text="@={viewModel.site}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/account_desc"
                        app:layout_constraintEnd_toEndOf="@id/siteInput"
                        app:layout_constraintStart_toStartOf="@id/siteInput"
                        app:layout_constraintTop_toBottomOf="@id/siteInput">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:inputType="textMultiLine|textCapSentences"
                            android:lines="3"
                            android:maxLines="5"
                            android:text="@={viewModel.desc}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/categoryTV"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_choose"
                        app:layout_constraintBaseline_toBaselineOf="@+id/categorySpinner"
                        app:layout_constraintStart_toStartOf="@id/descInput" />

                    <Spinner
                        android:id="@+id/categorySpinner"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:entries="@array/array_categories_spinner"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="@id/descInput"
                        app:layout_constraintStart_toEndOf="@id/categoryTV"
                        app:layout_constraintTop_toBottomOf="@id/descInput" />

                    <Button
                        android:id="@+id/saveBtn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:enabled="@{viewModel.isValid()d}"
                        android:text="@string/save"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/descInput"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@id/descInput"
                        app:layout_constraintTop_toBottomOf="@id/categorySpinner" />

                    <Button
                        android:id="@+id/deleteBtn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:visibility="@{viewModel.accountId == null ? View.GONE : View.VISIBLE}"
                        android:text="@string/delete"
                        android:textColor="@color/colorDestructive"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/descInput"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@id/descInput"
                        app:layout_constraintTop_toBottomOf="@id/categorySpinner" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </ScrollView>

    </LinearLayout>

</layout>